Finished for tablets, almost done for bigger than 1024px. Issue on mobile still exists.

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,12 @@ header{
 	-moz-box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.25);
 }
 
-.hidden-header, #right-header{
+.hidden, #right-header{
 	display: none;
+}
+
+.hidden-big{
+	display: block;
 }
 
 header, #top-menu>div, .dropdown-divs, #middle-menu, #bottom-menu, #nav2-header{	
@@ -262,6 +266,7 @@ nav ion-icon, nav2 ion-icon{
 	margin-top: 2.5rem;
 	font-size: 0.78rem;
 	line-height: 1.5rem;
+	padding: 1.3rem calc(1rem + 3vw) 2rem;
 	border-bottom: 2px solid hsl(0, 0%, 88%);
 }
 
@@ -368,21 +373,145 @@ footer>p{
 		max-width: 50%;
 	}
 
+	#latte-image, #card-img{
+		order: 1;
+	}
+
 	.text-area{
 		width: 50%;
 	}
 
-	.hidden-header, #right-header{
+	.hidden, #right-header{
 		display: block;
 	}
 
-	.menu-closed{
+	.menu-closed, .hidden-big{
 		display: none;
 	}
 
-	#right-header, #left-header{
+	#right-header, #left-header, #locate-store{
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+	}
+
+	#logo{
+		width: 51px;
+	}
+
+	#left-header>a{
+		font-weight: 600;
+		margin-left: 1.5rem;
+	}
+
+	#locate-store{
+		margin-right: 1.3rem;
+		font-size: 0.9rem;
+		font-weight: 500;
+	}
+
+	#right-header>a{
+		margin-left: 1rem;
+		padding: 0.3rem 0.9rem;
+	}
+
+	header{
+		padding-bottom: 1.1rem;
+		padding-left: 1.45rem;
+	}
+
+	#note{
+		padding: 1.3rem 24vw 2rem;
+	}
+}
+
+@media screen and (min-width: 1024px){
+	header{
+		padding: 1.55rem 2.6rem 1.5rem 2.5rem;
+	}
+
+	#logo{
+		margin-right: 1rem;
+	}
+
+	.text-area h2, #uta>h2{
+		font-size: 3rem;
+		line-height: 4rem;
+	}
+
+	#latte p{
+		font-size: 1.4rem;
+		line-height: 2.2rem;
+	}
+
+	.main-links{
+		font-size: 1rem;
+		font-weight: 600;
+	}
+
+	.text-area{
+		padding: 2rem 5rem 2rem;
+	}
+
+	#uta>h2{
+		font-size: 3.2rem;
+	}
+
+	#uta>p{
+		font-size: 1.4rem;
+	}
+
+	#cta>h2, #bta>h2{
+		line-height: unset;
+		font-size: 1.4rem;
+	}
+
+	#cta>p, #bta>p{
+		font-size: 1.1rem;
+		line-height: 2rem;
+	}
+
+	#note{
+		font-size: 0.85rem;
+	}
+
+	.above-footer{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		align-items: center
+	}
+
+	.dropdown-divs, .youknow{
+		height: auto;
+		z-index: 0;
+	}
+
+	[name^="logo"]{
+		margin-left: 0.6rem;
+	}
+
+	#sfd{
+		flex-direction: row;
+		align-items: center;
+		margin-bottom: 0;
+	}
+
+	#sfd .links{
+		padding: 0 1.5rem 0 1.5rem;
+		border-right: 1px solid var(--black);
+	}
+
+	#sfd .links:first-of-type{
+		padding-left: 0;
+	}
+
+	#sfd .links:last-of-type{
+		border-right: none;
+	}
+
+	.above-footer, footer{
+		margin: 0 2.5rem;
+		padding: 1.4rem 0 1rem;
 	}
 }
